<resources>
    <string name="app_name">pocketMaster</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="amount">Amount</string>
    <string name="description">Description</string>
    <string name="category">Category</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="total_expenses">Total Expenses</string>
    <string name="monthly_overview">Monthly Overview</string>
    <string name="total_income">Total Income</string>
    <string name="expense_breakdown">Expense Breakdown</string>
    <string name="add_transaction">Add Transaction</string>
    <string name="edit_transaction">Edit Transaction</string>
    <string name="delete_transaction">Delete Transaction</string>
    <string name="date">Date</string>
    <string name="type">Type</string>
    <string name="confirm">Confirm</string>
    <string name="delete">Delete</string>
    <string name="error_amount_required">Amount is required</string>
    <string name="error_category_required">Category is required</string>
    <string name="error_invalid_amount">Invalid amount</string>
    <string name="add_category">Add Category</string>
    <string name="edit_category">Edit Category</string>
    <string name="delete_category">Delete Category</string>
    <string name="tab_dashboard">Dashboard</string>
    <string name="tab_transactions">Transactions</string>
    <string name="tab_categories">Categories</string>
    <string name="current_balance">Current Balance</string>
    <string name="error_select_category">please select a category</string>
    <string name="error_description_required">no description added,please add a description to continue</string>
    <string name="add_transaction_desc">Add Transaction Desc</string>
    <string name="select_transaction_type">Select Transaction Type</string>
    <string name="change">Change</string>


    <style name="ToolbarTitleStyle" parent="TextAppearance.Material3.HeadlineSmall">
        <item name="android:textStyle">bold</item>
        <item name="android:letterSpacing">0.01</item>
    </style>

    <style name="TabTextStyle" parent="TextAppearance.Material3.LabelLarge">
        <item name="android:textStyle">bold</item>
        <item name="textAllCaps">false</item>
    </style>

    <style name="TabTextStyleBold" parent="TextAppearance.Material3.LabelLarge">
        <item name="android:textStyle">bold</item>
        <item name="textAllCaps">false</item>
    </style>


</resources>

